# tcknvkn-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: repo-metadata.txt
.github/workflows/: ci.yml
docs/: API_TR.md
examples/: README.md
src/tcknvkn/: __init__.py  _common.py  models.py  tckn.py  vkn.py
tests/: README.md  test_tcknvkn.py
