[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcknvkn"
version = "1.0.3"
description = "Python için TCKN (TC Kimlik No) ve VKN (Vergi Kimlik No) doğrulama kütüphanesi."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "TCKNVKN", email = "239645710+tckn-vkn@users.noreply.github.com" }
]
keywords = [
  "python",
  "tckn",
  "vkn",
  "tc üret",
  "tc uret",
  "tc no üret",
  "tc no uret",
  "tc oluştur",
  "vkn üret",
  "vergi no üret",
  "vergi no oluşturucu",
  "vkn algoritması",
  "vkn doğrulama algoritması"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://www.tcknvkn.com/kutuphaneler/python"
Repository = "https://github.com/tcknvkn/tcknvkn-python"
Documentation = "https://www.tcknvkn.com/kutuphaneler/python"
Issues = "https://github.com/tcknvkn/tcknvkn-python/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]